[package]
name = "blogos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# There is some breaking change in bootloader 0.10.x that I haven't figured out yet
[dependencies]
bootloader = "0.9.22"